tests/snapshots/repo_intelligence/repo_projected_retrieval_hit_page_result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/integration/../support/repo_intelligence.rs
assertion_line: 22
expression: value
---
{
  "hit": {
    "kind": "page",
    "node": null,
    "page": {
      "doc_id": "repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve",
      "doc_ids": [
        "repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve"
      ],
      "example_ids": [],
      "format_hints": [
        "julia_docstring"
      ],
      "keywords": [
        "ProjectionPkg.solve",
        "julia_docstring",
        "repo:projection-sample:doc:src/ProjectionPkg.jl#symbol:solve",
        "src/ProjectionPkg.jl"
      ],
      "kind": "reference",
      "module_ids": [
        "repo:projection-sample:module:ProjectionPkg"
      ],
      "page_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve",
      "path": "src/ProjectionPkg.jl",
      "paths": [
        "src/ProjectionPkg.jl",
        "src/ProjectionPkg.jl#symbol:solve"
      ],
      "repo_id": "projection-sample",
      "sections": [
        {
          "body": "Projected reference page for `ProjectionPkg.solve`.\nFormat hints:\n- `julia_docstring`\nSource paths:\n- `src/ProjectionPkg.jl`\n- `src/ProjectionPkg.jl#symbol:solve`",
          "level": 1,
          "paths": [
            "src/ProjectionPkg.jl",
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "section_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve#overview",
          "title": "Overview"
        },
        {
          "body": "Modules:\n- `ProjectionPkg` (src/ProjectionPkg.jl)\n\nSymbols:\n- `ProjectionPkg.solve` (src/ProjectionPkg.jl)",
          "level": 2,
          "paths": [
            "src/ProjectionPkg.jl"
          ],
          "section_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve#anchors",
          "title": "Anchors"
        },
        {
          "body": "Documentation:\n- `solve` (src/ProjectionPkg.jl#symbol:solve)",
          "level": 2,
          "paths": [
            "src/ProjectionPkg.jl#symbol:solve"
          ],
          "section_id": "repo:projection-sample:projection:reference:symbol:repo:projection-sample:symbol:ProjectionPkg.solve#sources",
          "title": "Documentation"
        }
      ],
      "symbol_ids": [
        "repo:projection-sample:symbol:ProjectionPkg.solve"
      ],
      "title": "ProjectionPkg.solve"
    }
  },
  "repo_id": "projection-sample"
}
