tests/snapshots/repo_intelligence/repo_sync_cli_json.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/repo_intelligence.rs
expression: value
---
{
  "checked_at": "[checked-at]",
  "checkout_path": "[checkout-path]",
  "checkout_state": "validated",
  "drift_state": "not_applicable",
  "health_state": "healthy",
  "last_fetched_at": null,
  "mirror_path": null,
  "mirror_revision": null,
  "mirror_state": "not_applicable",
  "mode": "ensure",
  "refresh": "fetch",
  "repo_id": "cli-sync",
  "revision": "240a40910ec97dff18b1631ff4301ac6214348d6",
  "source_kind": "local_checkout",
  "staleness_state": "not_applicable",
  "status_summary": {
    "attention_required": false,
    "drift_state": "not_applicable",
    "freshness": {
      "checked_at": "[checked-at]",
      "last_fetched_at": null,
      "staleness_state": "not_applicable"
    },
    "health_state": "healthy",
    "lifecycle": {
      "checkout_ready": true,
      "checkout_state": "validated",
      "mirror_ready": false,
      "mirror_state": "not_applicable",
      "source_kind": "local_checkout"
    },
    "revisions": {
      "aligned_with_mirror": false,
      "checkout_revision": "240a40910ec97dff18b1631ff4301ac6214348d6",
      "mirror_revision": null,
      "tracking_revision": null
    }
  },
  "tracking_revision": null,
  "upstream_url": "https://example.invalid/xiuxian-wendao/clisyncpkg.git"
}
